--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,174 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  color: #404E67;
+  background: #F5F7FA;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.table-wrapper {
+  width: 300px;
+  margin: 5px auto;
+  background: #fff;
+  padding: 5px;  
+  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  max-height: 400px;
+  overflow-y: scroll;
+}
+
+.table-title {
+  padding-bottom: 10px;
+  margin: 0 0 10px;
+}
+
+.table-title h2 {
+  margin: 6px 0 0;
+  font-size: 22px;
+}
+
+.table-title .add-new, .copy-link {
+  height: 30px;
+  font-weight: bold;
+  font-size: 12px;
+  text-shadow: none;
+  min-width: 50px;
+  border-radius: 5px;
+  line-height: 5px;
+}
+
+.table-title .add-new, .copy-link i {
+  margin-right: 4px;
+}
+
+table.table {
+  table-layout: fixed;
+}
+
+table.table tr th, table.table tr td {
+  border-color: #e9e9e9;
+}
+
+table.table th i {
+  font-size: 13px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+
+table.table th:last-child {
+  width: 50px;
+}
+
+table.table td a {
+  cursor: pointer;
+  display: inline-block;
+  margin: 0 5px;
+  min-width: 24px;
+}
+
+table.table td a.edit {
+  color: #FFC107;
+}
+
+table.table td a.delete {
+  color: #E34724;
+}
+
+table.table td i {
+  font-size: 19px;
+}
+
+table.table td a.add i {
+  font-size: 24px;
+  margin-right: -1px;
+  position: relative;
+  top: 3px;
+}
+
+table.table .form-control {
+  height: 32px;
+  line-height: 32px;
+  box-shadow: none;
+  border-radius: 2px;
+}
+
+table.table .form-control.error {
+  border-color: #f50000;
+}
+
+table.table td .add {
+  display: none;
+}
+
+table.table th {
+  text-align: left;
+}
+
+.table-name {
+  width: 200px;
+}
+
+.table-edit, .table-del {
+  width: 50px;
+}
+
+.button-func {
+  display: inline;
+}
+
+.template-input {
+  width: 90%;
+  height: 200px;
+}
+
+.save-template, .cancel {
+  height: 30px;
+  font-weight: bold;
+  font-size: 12px;
+  text-shadow: none;
+  min-width: 50px;
+  border-radius: 5px;
+  line-height: 5px;
+}
+
+.save-template, .cancel {
+  margin-right: 4px;
+}
+
+.name-template {
+  width: 90%;
+  margin-bottom: 5px;
+}
+
+.input-field {
+  text-align: center;
+}
+
+.input-button {
+  text-align: left;
+  margin-left: 11px;
+}
+
+.template-table {
+  width: revert;
+  margin-left: 12px;
+}
+
+.template-row {
+  cursor: pointer;
+}
+
+.table-head {
+  position: sticky;
+  top: 0;
+}
+
+.empty-template {
+  text-align: center;
+  font-weight: bolder;
+}
+
+.edit-button {
+  margin-left: 5px;
+}
